# testframework_example_comparison

./: CMakeLists.txt
examples/cppunit/cppunit/: Main.cpp  MoneyTest.cpp  MoneyTest.h
examples/cppunit/cppunit/money/: MoneyTest.h
examples/cppunit/ltest/: BoardGameTest.h  ChessTest.h  ExampleTestCase.h  Main.cpp  MoneyTest.h
examples/cppunit/src/money/: Money.h
